CES-8018 Send Contacts WA -> SY (#309)
* CES-8018 Send Contacts WA -> SY

* CES-8018 fix tests
